[gd_scene load_steps=6 format=3 uid="uid://dpb7iq8xorvje"]

[ext_resource type="StyleBox" uid="uid://wuh217h37o8i" path="res://themes/panel_background.tres" id="1_8eauo"]
[ext_resource type="Script" uid="uid://dodt514wa01q0" path="res://UI/tracker_manager_panel.gd" id="2_40bq2"]
[ext_resource type="Theme" uid="uid://cbwkyl6gws1s2" path="res://themes/text.tres" id="2_j4txh"]
[ext_resource type="Texture2D" uid="uid://xpaecgeeo52y" path="res://assets/icons/1F4CE.svg" id="4_h2r20"]
[ext_resource type="Texture2D" uid="uid://cnyn8bsbc5itj" path="res://assets/icons/2716.svg" id="5_t0iuc"]

[node name="TrackerManagerPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_8eauo")
script = ExtResource("2_40bq2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Emoji" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_j4txh")
text = "üìá "
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Title" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j4txh")
text = "TRACKER_MANAGER"
fit_content = true

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_j4txh")
text = " ‚ùå "

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 3
theme = ExtResource("2_j4txh")
text = "SAVE"
icon = ExtResource("4_h2r20")
text_overrun_behavior = 1
expand_icon = true

[node name="DiscardButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 3
theme = ExtResource("2_j4txh")
text = "DISCARD"
icon = ExtResource("5_t0iuc")
text_overrun_behavior = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Trackers" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Trackers"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("2_j4txh")
text = "
Óâü

"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Trackers/AddButton" to="." method="_on_add_button_pressed"]
